--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="{{ url_for('static', filename='img/logo.png') }}" alt="">
-        <span>ResuMate</span>
+        <span>Re</span>
       </a>
 
       <nav id="navbar" class="navbar">
