--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -20,7 +20,7 @@
 			<div class="left">
 				<div class="top_link"><a href="/"><img src="https://drive.google.com/u/0/uc?id=16U__U5dJdaTfNGobB_OpwAJ73vM50rPV&export=download" alt="">Return home</a></div>
 				<div class="contact">
-					<form action="/loginpage" method="post">
+					<form action="/loginpage" method="POST">
 						<h3>LOGIN HERE</h3>
 						<input type="text" placeholder="Username" name="uname">
                         <input type="email" placeholder="Email Address" name="email">
